--- a/.github/workflows/run-compile-test.yml
+++ b/.github/workflows/run-compile-test.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   check_compilation:
+    if: ${{ !contains(github.event.head_commit.message, '[skip ci]') }}
     runs-on: ubuntu-latest
 
     steps:
@@ -21,5 +22,5 @@ jobs:
 
       - name: Run SML Compilation Check
         run: |
-          chmod +x ./check_compilation.sh
-          ./check_compilation.sh
+          chmod +x ./test-compile
+          ./test-compile
