--- a/.github/workflows/run-sml-tests.yml
+++ b/.github/workflows/run-sml-tests.yml
@@ -21,8 +21,15 @@ jobs:
         sudo apt-get update
         sudo apt-get install smlnj  # Install SML/NJ
 
+    - name: Install python dependencies
+      run: |
+        sudo apt-get install python3
+        sudo apt-get install python3-pip
+        pip3 install --upgrade pip
+        pip3 install -r requirements.txt
+
     - name: Run SML tests
       run: |
         chmod +x test
-        ./test false
+        ./test
 
